2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs: Add in some more missing default
	  values.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs: Remove a bunch of MoonlightBugs

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs: Yay for SL4 compatible default value
	  tests. Who wants to fix them now... ;)

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/MediaElementTest.cs: Different
	  exceptions are thrown when you call SetValue () or
	  ClearValue() with a readonly DP depending on whether it's a
	  custom dp or core dp. Fixes one moon-unit and part of drt
	  539

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/SetterTest.cs: Update the SetterTests to SL4
	  compatibility.

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/SetterBaseCollectionTest.cs: Remove outdated
	  comment

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/SetterBaseCollectionTest.cs: Update the
	  SetterBaseCollection tests to SL4 compatibility.

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* misc/Parsing/MiscParsing.cs: This test passes now.

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media/BrushTest.cs: Add some FindName tests
	  to DOs which can have multiple parents. We currently
	  register their names when we shouldn't.

2010-04-19  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/StyleTest.cs: Update the Style moon-units to
	  SL4 compatibility.

2010-04-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* security/SecuritySafeCriticalTest.cs: Work around a limitation
	wrt TimeZoneInfo (unrelated to [SecuritySafeCritical] testing)

2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* security/ElevatedTrustTest.cs: New. Add test cases to validate
	API that requires elevated trust - they (mostly) throw a
	SecurityException (instead of a MethodAccessException)